# embedded-provisioning-sdk-v1

./: .gitmodules  CMakeLists.txt
demos/: CMakeLists.txt
demos/fleet_provisioning/fleet_provisioning_keys_cert/: CMakeLists.txt  fleet_provisioning_keys_cert_demo.c  main.c  mqtt_agent.c  mqtt_agent.h  mqtt_operations.c  mqtt_operations.h  pkcs11_operations.c  provisioning_sdk.h
libraries/mqtt_agent/: mqttAgentFilePaths.cmake
libraries/mqtt_agent/source/: freertos_agent_message.c  freertos_command_pool.c  mqtt_agent.c
libraries/mqtt_agent/source/include/: freertos_agent_message.h  mqtt_agent.h
platform/posix/: CMakeLists.txt  posixFilePaths.cmake
platform/posix/pal_event/: CMakeLists.txt  pal_event.c  pal_event.h
platform/posix/pal_queue/: CMakeLists.txt  pal_queue.c  pal_queue.h
platform/posix/transport/: CMakeLists.txt
platform/posix/transport/include/: mbedtls_pkcs11_posix.h
platform/posix/transport/src/: mbedtls_pkcs11_posix.c
tests/: CMakeLists.txt
tests/pal_event/: CMakeLists.txt  pal_event_test.c  unity_config.h
tests/pal_queue/: CMakeLists.txt  pal_queue_test.c
